--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,10 @@ body{
 .description{
     font-size:1.3rem;
 }
+
+.frame{
+    border: 0.1rem solid black;
+    text-align: center;
+    border-radius: 5%;
+    /* object-fit: cover; */
+}
