--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,18 @@ body{
     /* background-color: #271300; */
 }
 
+/* img{
+    flex-shrink:2;
+} */
+
 .description{
     font-size:1.3rem;
+    text-align: left;
+    flex-shrink: 2;
+}
+
+p{
+    flex-shrink: 2;
 }
 
 .frame{
@@ -16,4 +26,31 @@ body{
     text-align: center;
     border-radius: 5%;
     /* object-fit: cover; */
+}
+
+.annotation{
+    margin-bottom: 20px;
+}
+
+.persona{
+    margin-bottom:20px;
+}
+
+.content{
+    padding-left:50px;
+    padding-right:50px;
+}
+
+.coffee_cup{
+    background: url(coffee.jpg) center;
+    max-width: 100%;
+    height: 100vh;
+}
+
+.section-title{
+    background-color:brown
+}
+
+.section{
+    margin-top:60px;
 }
