--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,18 @@ h1, h2{
     font-family: 'Helvetica';
 }
 
+h3{
+    font-family: 'Helvetica';
+    padding-top:40px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 body{
     font-family: 'Helvetica';
     /* background-color: #271300; */
 }
 
-/* img{
-    flex-shrink:2;
-} */
 
 .description{
     font-size:1.3rem;
@@ -25,7 +29,6 @@ p{
     border: 0.1rem solid black;
     text-align: center;
     border-radius: 5%;
-    /* object-fit: cover; */
 }
 
 .annotation{
